--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+# libtcod stuff
+libtcod*
+libtcodpy/
+
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -97,4 +102,3 @@ ENV/
 
 # mypy
 .mypy_cache/
-
