--- a/config_files/settings.json
+++ b/config_files/settings.json
@@ -6,5 +6,10 @@
   "map": {
     "width": 80,
     "height": 45
+  },
+  "fov": {
+    "algorithm": 0,
+    "light_walls": true,
+    "radius": 10
   }
 }
