--- a/config_files/settings.json
+++ b/config_files/settings.json
@@ -3,13 +3,25 @@
     "width": 80,
     "height": 50
   },
+
   "map": {
     "width": 80,
     "height": 45
   },
+
+  "room": {
+    "max_size": 10,
+    "min_size": 6,
+    "max_number": 30
+  },
+
   "fov": {
     "algorithm": 0,
     "light_walls": true,
     "radius": 10
+  },
+
+  "monsters": {
+    "max_per_room": 3
   }
 }
